--- a/.tekton/tasks.yml
+++ b/.tekton/tasks.yml
@@ -1,3 +1,4 @@
+---
 apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
@@ -17,7 +18,23 @@ spec:
         runAsNonRoot: false
         runAsUser: 0
       script: |
---- 
+        #!/usr/bin/env sh
+        set -eu
+        echo "Removing all files from ${WORKSPACE_SOURCE_PATH} ..."
+        # Delete any existing contents of the directory if it exists.
+        #
+        # We don't just "rm -rf ${WORKSPACE_SOURCE_PATH}" because ${WORKSPACE_SOURCE_PATH} might be "/"
+        # or the root of a mounted volume.
+        if [ -d "${WORKSPACE_SOURCE_PATH}" ] ; then
+          # Delete non-hidden files and directories
+          rm -rf "${WORKSPACE_SOURCE_PATH:?}"/*
+          # Delete files and directories starting with . but excluding ..
+          rm -rf "${WORKSPACE_SOURCE_PATH}"/.[!.]*
+          # Delete files and directories starting with .. plus any other character
+          rm -rf "${WORKSPACE_SOURCE_PATH}"/..?*
+        fi
+
+---
 apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
@@ -26,16 +43,20 @@ spec:
   workspaces:
     - name: source
   params:
-    - name: ars
+    - name: args
       description: Arguments to pass to nose
       type: string
       default: "-v"
   steps:
-    - name: nosetest
+    - name: nosetests
       image: python:3.9-slim
       workingDir: $(workspaces.source.path)
       script: |
-#!/bin/bash
+        #!/bin/bash
+        set -e
+        python -m pip install --upgrade pip wheel
+        pip install -r requirements.txt
+        nosetests $(params.args)
 
 
 
