--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -25,3 +25,4 @@ jobs:
         run: |
           nosetests -v --with-spec --spec-color --with-coverage --cover-package=app
 #comment to change script
+#new commit for workflow
